<resources>
    <string name="app_name">DOT SDK Samples</string>
    <string name="navigation_destination_custom_ui_face_auto_capture">Custom UI Face Auto Capture</string>
    <string name="navigation_destination_document_auto_capture">Document Auto Capture</string>
    <string name="navigation_destination_face_auto_capture">Face Auto Capture</string>
    <string name="navigation_destination_home">Home</string>
    <string name="navigation_destination_magnifeye_liveness">MagnifEye Liveness</string>
    <string name="navigation_destination_multirange_liveness">MultiRange Liveness</string>
    <string name="navigation_destination_nfc_reading">NFC Reading</string>
    <string name="navigation_destination_palm_auto_capture">Palm Auto Capture</string>
    <string name="navigation_destination_smile_liveness">Smile Liveness</string>
    <string name="sample_custom_ui_face_auto_capture_description">Base Face Auto Capture component with custom UI.</string>
    <string name="sample_custom_ui_face_auto_capture_phase_candidate_selection">Candidate Selection</string>
    <string name="sample_custom_ui_face_auto_capture_phase_pre_candidate_selection">Pre-Candidate Selection</string>
    <string name="sample_custom_ui_face_auto_capture_title">Custom UI Face Auto Capture</string>
    <string name="sample_document_auto_capture_description">Basic component sample.</string>
    <string name="sample_document_auto_capture_title">Document Auto Capture</string>
    <string name="sample_face_auto_capture_description">Basic component sample.</string>
    <string name="sample_face_auto_capture_title">Face Auto Capture</string>
    <string name="sample_magnifeye_liveness_description">Basic component sample.</string>
    <string name="sample_magnifeye_liveness_summary">Use the Digital Identity Service in order to evaluate the MagnifEye liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_magnifeye_liveness_check</string>
    <string name="sample_magnifeye_liveness_title">MagnifEye Liveness</string>
    <string name="sample_multirange_liveness_description">Basic component sample.</string>
    <string name="sample_multirange_liveness_summary">Use the Digital Identity Service in order to evaluate the MultiRange Liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation</string>
    <string name="sample_multirange_liveness_title">MultiRange Liveness</string>
    <string name="sample_nfc_reading_cancel">Cancel</string>
    <string name="sample_nfc_reading_description">Combination of Document Auto Capture component with enabled MRZ recognition and NFC Travel Document Reader component.</string>
    <string name="sample_nfc_reading_title">NFC Reading</string>
    <string name="sample_palm_auto_capture_description">Basic component sample.</string>
    <string name="sample_palm_auto_capture_title">Palm Auto Capture</string>
    <string name="sample_smile_liveness_description">Basic component sample.</string>
    <string name="sample_smile_liveness_summary">Use the Digital Identity Service in order to evaluate the smile liveness score. See: https://developers.innovatrics.com/digital-onboarding/technical/remote/dot-dis/latest/documentation/#_smile_liveness_check</string>
    <string name="sample_smile_liveness_title">Smile Liveness</string>
    <string name="sample_start">Start</string>
</resources>
