<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/document_auto_capture_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/document_auto_capture_title"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_document_auto_capture_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/document_auto_capture_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/document_auto_capture_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_document_auto_capture_description"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/document_auto_capture_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/document_auto_capture_title" />

                <Button
                    android:id="@+id/document_auto_capture_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/document_auto_capture_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/nfc_reading_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/nfc_reading_title"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_nfc_reading_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/nfc_reading_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nfc_reading_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_nfc_reading_description"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/nfc_reading_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nfc_reading_title" />

                <Button
                    android:id="@+id/nfc_reading_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nfc_reading_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/face_auto_capture_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/face_auto_capture_title"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_face_auto_capture_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/face_auto_capture_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/face_auto_capture_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_face_auto_capture_description"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/face_auto_capture_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/face_auto_capture_title" />

                <Button
                    android:id="@+id/face_auto_capture_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/face_auto_capture_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/smile_liveness_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/smile_liveness_title"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_smile_liveness_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/smile_liveness_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/smile_liveness_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_smile_liveness_description"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/smile_liveness_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/smile_liveness_title" />

                <Button
                    android:id="@+id/smile_liveness_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/smile_liveness_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/magnifeye_liveness_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/magnifeye_liveness_title"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_magnifeye_liveness_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/magnifeye_liveness_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/magnifeye_liveness_description"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/sample_magnifeye_liveness_description"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/magnifeye_liveness_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/magnifeye_liveness_title" />

                <Button
                    android:id="@+id/magnifeye_liveness_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/magnifeye_liveness_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
